[feat] username 추가 / 프로젝트 생성시 main(root)폴더 생성